--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,5 +51,5 @@ jobs:
 
       - name: Check license headers
         run: |
-          docker run -v ${PWD}:/src ghcr.io/google/addlicense -check $(find . -type f -name "*.go")
-          docker run -v ${PWD}:/src ghcr.io/google/addlicense -check $(find . -type f -name "Dockerfile")
+          docker run -v "${PWD}:/src" ghcr.io/google/addlicense -check "$(find . -type f -name "*.go")"
+          docker run -v "${PWD}:/src" ghcr.io/google/addlicense -check "$(find . -type f -name "Dockerfile")"
