--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -27,8 +27,8 @@ linters-settings:
       - name: error-naming
       - name: error-return
       - name: error-strings
-     # - name: exported
-      - name: if-return
+      # - name: exported
+      # - name: if-return
       - name: increment-decrement
       - name: indent-error-flow
       - name: blank-imports
@@ -42,7 +42,7 @@ linters-settings:
       - name: unused-parameter
       - name: unreachable-code
       - name: var-declaration
-      #- name: var-naming
+      # - name: var-naming
 
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
