ci: fix ci workflow if condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ permissions: read-all
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, "[ci skip]")'
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
@@ -23,7 +23,7 @@ jobs:
 
   golangci:
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, "[ci skip]")'
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
@@ -39,7 +39,7 @@ jobs:
 
   check-license:
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, "[ci skip]")'
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
