--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,15 @@ jobs:
         run: |
           docker run -v "${PWD}:/src" ghcr.io/google/addlicense -check "$(find . -type f -name "*.go")"
           docker run -v "${PWD}:/src" ghcr.io/google/addlicense -check "$(find . -type f -name "Dockerfile")"
+
+  codecov:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d # v3.1.4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
