--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -1,4 +1,4 @@
-name: 'Validate PR title'
+name: Validate PR title
 
 on:
   pull_request_target:
@@ -10,8 +10,7 @@ on:
 permissions: read-all
 
 jobs:
-  main:
-    name: Validate PR title
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@c3cd5d1ea3580753008872425915e343e351ab54 # v5.2.0
